src/objects/Modification__c.object
<CustomObject>
    <description>Represents a requested change to a Target Account.  The change could be a request of ownership, a relinquishment of ownership, or a modification to the details of the Target Account possibly including split ownership definition.</description>
    <fields>
        <fullName>Account_Type__c</fullName>
        <formula>IF(ISPICKVAL(Target_Account__r.Account_Type__c,&quot;Channel&quot;),&quot;Channel&quot;, 
IF(ISPICKVAL(Target_Account__r.Account_Type__c,&quot;F30&quot;),&quot;F30&quot;, 
IF(ISPICKVAL(Target_Account__r.Account_Type__c,&quot;Federal&quot;),&quot;Federal&quot;, 
IF(ISPICKVAL(Target_Account__r.Account_Type__c,&quot;Greenfield&quot;),&quot;Greenfield&quot;, 
IF(ISPICKVAL(Target_Account__r.Account_Type__c,&quot;MP&quot;),&quot;MP&quot;, 
IF(ISPICKVAL(Target_Account__r.Account_Type__c,&quot;Named&quot;),&quot;Named&quot;, 
IF(ISPICKVAL(Target_Account__r.Account_Type__c,&quot;S&amp;L&quot;),&quot;S&amp;L&quot;, 
IF(ISPICKVAL(Target_Account__r.Account_Type__c,&quot;TAL&quot;),&quot;TAL&quot;, 
IF(ISPICKVAL(Target_Account__r.Account_Type__c ,&quot;WS&quot;),&quot;WS&quot;, 
&quot;Unknown&quot;)))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approving_AC__c</fullName>
        <label>Approving RC</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Modifications3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Approving_FieldOps__c</fullName>
        <label>Approving FieldOps</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Modifications6</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Approving_RSM__c</fullName>
        <label>Approving RSM</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Modifications5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Country_Code__c</fullName>
        <formula>Target_Account__r.Country_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Country Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <picklist>
            <controllingField>Region__c</controllingField>
            <picklistValues>
                <fullName>Algeria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Austria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahrain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bangladesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belarus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belgium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bosnia and Herzegowina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Botswana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brazil</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bulgaria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cambodia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cameroon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Central African Republic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chad</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>China</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Congo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Congo, The DRC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Croatia (local name: Hrvatska)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cyprus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Czech Republic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Denmark</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>East Timor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Egypt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Falkland Islands</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Faroe Islands</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>France</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gabon</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>EVM_Modification_Id__c</fullName>
        <externalId>true</externalId>
        <label>EVM Modification Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Effective_Date__c</fullName>
        <defaultValue>DATE(YEAR(Today()), MONTH(Today())+1 ,1)</defaultValue>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <inlineHelpText>Leave blank to request a change to last indefinitely.</inlineHelpText>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Industry__c</fullName>
        <formula>TEXT(Target_Account__r.Industry__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Industry</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsSplit__c</fullName>
        <formula>IF(
  OR(
     AND(  $RecordType.DeveloperName=&apos;Modify&apos;,  
        OR(
            AND( NOT(ISBLANK(Owner2__c)), Owner2__c&lt;&gt; Target_Account__r.Owner2__c ),
            AND( NOT(ISBLANK(Owner3__c)), Owner3__c&lt;&gt; Target_Account__r.Owner3__c ),
            AND( NOT(ISBLANK(Owner4__c)), Owner4__c&lt;&gt; Target_Account__r.Owner4__c ),
            AND( NOT(ISBLANK(Target_Account__r.Owner2__c)), Owner2__c&lt;&gt; Target_Account__r.Owner2__c ),
            AND( NOT(ISBLANK(Target_Account__r.Owner3__c)), Owner3__c&lt;&gt; Target_Account__r.Owner3__c ),
            AND( NOT(ISBLANK(Target_Account__r.Owner4__c)), Owner4__c&lt;&gt; Target_Account__r.Owner4__c ),
            AND( NOT(ISBLANK( Owner2_Percentage__c )), Owner2_Percentage__c&lt;&gt;  Target_Account__r.Owner2_Percentage__c  ),
            AND( NOT(ISBLANK( Owner3_Percentage__c )), Owner3_Percentage__c&lt;&gt;  Target_Account__r.Owner3_Percentage__c  ),
            AND( NOT(ISBLANK( Owner4_Percentage__c )), Owner4_Percentage__c&lt;&gt;  Target_Account__r.Owner4_Percentage__c  )
        ) 
     ),
     AND(  $RecordType.DeveloperName=&apos;Add&apos;,  
         OR(
            NOT(ISBLANK(Owner2__c)),
            NOT(ISBLANK(Owner3__c)),
            NOT(ISBLANK(Owner4__c))
         ) 
     )
)
, &apos;Yes&apos;, &apos;No&apos;)</formula>
        <label>Split Change</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Owner_Selected__c</fullName>
        <description>Value is TRUE if the New Owner field is populated with a user who is not the Manager of the person who created the record.</description>
        <formula>IF( New_Owner__r.Id =  CreatedBy.Manager.Id ,&apos;FALSE&apos;, &apos;TRUE&apos;)</formula>
        <label>New Owner Selected</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Owner__c</fullName>
        <label>New Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Modifications4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Owner2_Percentage__c</fullName>
        <label>2nd Owner Percentage</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Owner2__c</fullName>
        <label>2nd Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Modifications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Owner3_Percentage__c</fullName>
        <label>3rd Owner Percentage</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Owner3__c</fullName>
        <label>3rd Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Modifications1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Owner4_Percentage__c</fullName>
        <label>4th Owner Percentage</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Owner4__c</fullName>
        <label>4th Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Modifications2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Primary_Account__c</fullName>
        <formula>IF( Target_Account__r.Primary_Account__c , IMAGE(&apos;/img/checkbox_checked.gif&apos;, &apos;Checked&apos;) , IMAGE(&apos;/img/checkbox_unchecked.gif&apos;, &apos;Not Checked&apos;) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Process_Order__c</fullName>
        <formula>CASE( $RecordType.DeveloperName,
&apos;Drop&apos;, 1,
&apos;Add&apos;,  2,
&apos;Create&apos;,3,
4
)</formula>
        <label>Process Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Reason__c</fullName>
        <label>Reason</label>
        <picklist>
            <picklistValues>
                <fullName>Example Reason 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Example Reason 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Out of Business</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <picklist>
            <picklistValues>
                <fullName>APAC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EMEA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LATAM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WORLDWIDE</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Request_Summary__c</fullName>
        <formula>CASE( Process_Order__c ,
1, IF( ISBLANK(New_Owner__c),

CreatedBy.FirstName &amp; &apos; &apos; &amp; CreatedBy.LastName &amp; &apos; is requesting to drop this customer account from their Target Account List.  If approved it will be placed in the unassigned pool until an add request is made by another account manager.&apos;,

CreatedBy.FirstName &amp; &apos; &apos; &amp; CreatedBy.LastName &amp; &apos; is requesting to drop this zip code from their Target Account List.  If approved it will be reassigned to &apos; &amp; New_Owner__r.FirstName &amp; &apos; &apos; &amp;  New_Owner__r.LastName  &amp; &apos;.&apos;

),
2,

CreatedBy.FirstName &amp; &apos; &apos; &amp; CreatedBy.LastName &amp; &apos; is requesting that this Customer be added to their Target Account List.  If approved, the request will only be granted if the account is in the unassigned pool, or another user has submitted a request to drop.&apos;,

3,

CreatedBy.FirstName &amp; &apos; &apos; &amp; CreatedBy.LastName &amp; &apos; is requesting this NEW record be created in the Target Account system and be added to their Target Account List.&apos;

,

CreatedBy.FirstName &amp; &apos; &apos; &amp; CreatedBy.LastName &amp; &apos; is requesting that the details of this Target Account be updated with the information below.&apos;

)</formula>
        <label>Request Summary</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SIC_Code__c</fullName>
        <formula>Target_Account__r.SIC_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SIC Code</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>State_Local_Account_Manager__c</fullName>
        <label>State &amp; Local Account Manager</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State_Province__c</fullName>
        <label>State / Province</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Executed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Submitted - AC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Submitted - AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Submitted - Field Ops</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Submitted - RSM</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Street_Mod_Only__c</fullName>
        <formula>IF(
AND(
 $RecordType.DeveloperName = &apos;Modify&apos;,
OR( City__c =  Target_Account__r.City__c ,ISBLANK( City__c )),
OR(  State_Province__c  =  Target_Account__r.State_Province__c ,ISBLANK( State_Province__c )),
OR(  Zip_Postal_Code__c  =  Target_Account__r.Zip_Postal_Code__c ,ISBLANK( Zip_Postal_Code__c )),
OR(  Text(Country__c )=&apos;&apos;),
OR(  State_Local_Account_Manager__c  =  Target_Account__r.State_Local_Account_Manager__c ,ISBLANK( State_Local_Account_Manager__c )),
 IsSplit__c = &apos;No&apos;
),
&apos;Yes&apos;,
&apos;No&apos;
)</formula>
        <label>Street Mod Only</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street__c</fullName>
        <label>Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Target_Account_Owner_Id__c</fullName>
        <formula>Target_Account__r.OwnerId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Target Account Owner Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Target_Account__c</fullName>
        <label>Target Account</label>
        <referenceTo>Target_Account__c</referenceTo>
        <relationshipLabel>Modifications</relationshipLabel>
        <relationshipName>Modifications</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Vertical__c</fullName>
        <label>Vertical</label>
        <picklist>
            <picklistValues>
                <fullName>Agriculture</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Air</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chemicals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>State &amp; Local Government</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Higher Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home Health</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Construction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Professional Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consumer Products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retail Storefront: Gas &amp; Convenience Stations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Public Administration &amp; Safety</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retail Storefront: Department Stores &amp; Apparel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Emergency Medical Systems</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amusement Parks Museums and Zoos</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financial Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Food Supply Chain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Forestry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pharmaceutical &amp; Medical Devices</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hospitals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lodging</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electronics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Laboratories</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retail Storefront: Mass Merchants/Superstores</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Communications &amp; Entertainment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Metal Products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Federal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mining</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oil &amp; Gas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Publishing</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Zip_Postal_Code__c</fullName>
        <label>Zip / Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Modification</label>
    <nameField>
        <displayFormat>Mod-{0000000}</displayFormat>
        <label>Mod Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Modifications</pluralLabel>
    <recordTypes>
        <fullName>Add</fullName>
        <active>true</active>
        <description>Use this Record Type to request ownership of this Target Account.</description>
        <label>Add</label>
    </recordTypes>
    <recordTypes>
        <fullName>Create</fullName>
        <active>true</active>
        <label>Create</label>
    </recordTypes>
    <recordTypes>
        <fullName>Drop</fullName>
        <active>true</active>
        <description>Use this Record Type if you own this Target Account and wish to relinquish ownership.</description>
        <label>Drop</label>
    </recordTypes>
    <recordTypes>
        <fullName>Modify</fullName>
        <active>true</active>
        <description>Use this Record Type to request a change to the details of this Target Account.</description>
        <label>Modify</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>No_Gaps_in_Owner_List</fullName>
        <active>true</active>
        <errorConditionFormula>OR(
AND( NOT(ISBLANK(Owner3__c)), ISBLANK(Owner2__c) ),
AND( NOT(ISBLANK(Owner4__c)), ISBLANK(Owner2__c) ),
AND( NOT(ISBLANK(Owner4__c)), ISBLANK(Owner3__c) )
)</errorConditionFormula>
        <errorMessage>You cannot define a 3rd owner without a 2nd, and you cannot define a 4th owner without a 2nd and 3rd</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Owner_for_each_percentage</fullName>
        <active>true</active>
        <errorConditionFormula>OR(
AND( ISBLANK(Owner2__c), NOT(ISBLANK( Owner2_Percentage__c )) ),
AND( ISBLANK(Owner3__c), NOT(ISBLANK( Owner3_Percentage__c )) ),
AND( ISBLANK(Owner4__c), NOT(ISBLANK( Owner4_Percentage__c )) )
)</errorConditionFormula>
        <errorMessage>You cannot define a percentage if you have not identified an owner.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Percentage_Sum</fullName>
        <active>true</active>
        <errorConditionFormula>BLANKVALUE(Owner_Percentage__c,1) + 
BLANKVALUE(Owner2_Percentage__c,0) + 
BLANKVALUE(Owner3_Percentage__c,0) +  
BLANKVALUE(Owner4_Percentage__c,0) &lt;&gt; 1</errorConditionFormula>
        <errorMessage>The owner percentages must total to 100%</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Percentage_for_each_owner</fullName>
        <active>true</active>
        <errorConditionFormula>OR(
AND( NOT(ISBLANK(Owner2__c)), ISNULL( Owner2_Percentage__c ) ),
AND( NOT(ISBLANK(Owner3__c)), ISNULL( Owner3_Percentage__c ) ),
AND( NOT(ISBLANK(Owner4__c)), ISNULL( Owner4_Percentage__c ) )
)</errorConditionFormula>
        <errorMessage>Each owner you define must have a percentage defined as well.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Test</fullName>
        <active>false</active>
        <errorConditionFormula>Target_Account__r.Country_Code__c = &apos;US&apos;</errorConditionFormula>
        <errorMessage>Test</errorMessage>
    </validationRules>
</CustomObject>